# offline-flashcards-kali-forces

./: README.md
flashapp/: flashcards.txt
flashapp/styles/: test.txt
hack_the_hills/: FlashCard.cpp  changes.txt  install.bat
source-code/: readme.txt
source-code/Source Code/: CMakeLists.txt  flashcards.cpp  flashcards.h  flashcards.txt  ima2.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
